; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_btree.c_xfs_btree_diff_two_ptrs.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_btree.c_xfs_btree_diff_two_ptrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_btree_cur = type { i32 }
%union.xfs_btree_ptr = type { i32 }

@XFS_BTREE_LONG_PTRS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @xfs_btree_diff_two_ptrs(%struct.xfs_btree_cur* %0, %union.xfs_btree_ptr* %1, %union.xfs_btree_ptr* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.xfs_btree_cur*, align 8
  %6 = alloca %union.xfs_btree_ptr*, align 8
  %7 = alloca %union.xfs_btree_ptr*, align 8
  store %struct.xfs_btree_cur* %0, %struct.xfs_btree_cur** %5, align 8
  store %union.xfs_btree_ptr* %1, %union.xfs_btree_ptr** %6, align 8
  store %union.xfs_btree_ptr* %2, %union.xfs_btree_ptr** %7, align 8
  %8 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %5, align 8
  %9 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @XFS_BTREE_LONG_PTRS, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %24

14:                                               ; preds = %3
  %15 = load %union.xfs_btree_ptr*, %union.xfs_btree_ptr** %6, align 8
  %16 = bitcast %union.xfs_btree_ptr* %15 to i32*
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @be64_to_cpu(i32 %17)
  %19 = load %union.xfs_btree_ptr*, %union.xfs_btree_ptr** %7, align 8
  %20 = bitcast %union.xfs_btree_ptr* %19 to i32*
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @be64_to_cpu(i32 %21)
  %23 = sub nsw i64 %18, %22
  store i64 %23, i64* %4, align 8
  br label %34

24:                                               ; preds = %3
  %25 = load %union.xfs_btree_ptr*, %union.xfs_btree_ptr** %6, align 8
  %26 = bitcast %union.xfs_btree_ptr* %25 to i32*
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @be32_to_cpu(i32 %27)
  %29 = load %union.xfs_btree_ptr*, %union.xfs_btree_ptr** %7, align 8
  %30 = bitcast %union.xfs_btree_ptr* %29 to i32*
  %31 = load i32, i32* %30, align 4
  %32 = call i64 @be32_to_cpu(i32 %31)
  %33 = sub nsw i64 %28, %32
  store i64 %33, i64* %4, align 8
  br label %34

34:                                               ; preds = %24, %14
  %35 = load i64, i64* %4, align 8
  ret i64 %35
}

declare dso_local i64 @be64_to_cpu(i32) #1

declare dso_local i64 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
